--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
           (Tip: you can change your vote)
         </div>
         <div id="hostname">
-	Vote processed by {{hostname}} ({{node}})
+          Processed by container ID {{hostname}}
         </div>
       </div>
     </div>
